--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                     </div>
                     <div class="my-main-block d-flex flex-column  ">
-                        <div class="my-user-chat my-high-vh w-100 my-bg-user-chat p-3 ">
+                        <div class="my-user-chat my-high-vh w-100 my-bg-user-chat p-3 overflow-scroll ">
 
 
                             <div class="   d-flex  container-message"
@@ -144,14 +144,7 @@
 
                             </div>
 
-                            <!-- <div class="your-message d-flex justify-content-start ms-3 ">
-                                <div class="your-answear bg-your-answear p-3 rounded-3 ">
-                                    <div>
-                                        Anvedi da quanto tempo
-
-                                    </div>
-                                </div>
-                            </div> -->
+                           
 
 
                         </div>
@@ -160,8 +153,13 @@
 
                             <i class="fa-regular fa-face-smile my-color-icon p-4"></i>
 
-                            <input class="form-control" type="text" placeholder="Scrivi un messaggio"
-                                aria-label="default input example">
+                            <input class="form-control"
+                            v-model="textMessage" 
+                            type="text" 
+                            placeholder="Scrivi un messaggio"
+                            aria-label="default input example"
+                            @keyup.enter="addMessage()"
+                            >
 
                             <i class="fa-solid fa-microphone my-color-icon p-4"></i>
 
