--- a/index.html
+++ b/index.html
@@ -87,13 +87,16 @@
                                 <button class="btn btn-outline-secondary" type="button" id="button-addon1"><i
                                         class="fa-solid fa-magnifying-glass"></i></button>
                                 <input type="text" class="form-control" placeholder="Cerca o inizia un nuova chat"
-                                    aria-label="Example text with button addon" aria-describedby="button-addon1">
+                                    aria-label="Example text with button addon" aria-describedby="button-addon1"
+                                    v-model="userName"
+                                    
+                                    >
                             </div>
                         </div>
                         <div class="contacts ">
                             <ul class="p-0">
                                 <li class=" gap-3  d-flex align-items-center justify-content-between  border-bottom user-padding bg-white "
-                                    v-for="(currentUser, indexUser) in contacts"
+                                    v-for="(currentUser, indexUser) in filterName "
                                     @click="changeActiveContact(indexUser)">
 
                                     <img :src="currentUser.avatar" alt="" class="">
