--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="my-container">
 
                 <div class="my-navbar  ">
-
+                    <!-- header dello user -->
                     <div class="my-nav-left d-flex justify-content-between align-items-center p-2">
                         <div class="d-flex align-items-center gap-2">
                             <img src="img/avatar_4.jpg" alt="">
@@ -40,7 +40,7 @@
                         </div>
 
 
-
+                        <!-- header della chat -->
                         <span class="p-2">
                             <i class="fa-solid fa-circle-notch p-2 my-color-icon"></i>
                             <i class="fa-solid fa-message p-2 my-color-icon"></i>
@@ -55,7 +55,7 @@
                             <img :src="activeContact.avatar" alt="">
                             <div>
                                 <div> {{activeContact.name}}</div>
-                                <div>ultimo accesso 12.00</div>
+                                <!-- <div>ultimo accesso {{activeContact.messages[activeContact.messages.length - 1].date}}</div> -->
 
                             </div>
                         </div>
@@ -84,7 +84,7 @@
 
 
                         </div>
-
+                        <!-- barra per la ricerca utente -->
                         <div class="my-search-bar p-2">
                             <div class="input-group">
                                 <button class="btn btn-outline-secondary" type="button" id="button-addon1"><i
