Inserimento scroll automatico esercizio finito

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
 
-            <div class="my-container">
+            <div class="my-container  ">
 
                 <div class="my-navbar  ">
                     <!-- header dello user -->
@@ -145,7 +145,7 @@
                     <!-- chat principale -->
 
                     <div class="my-main-block d-flex flex-column  ">
-                        <div class="my-user-chat my-high-vh w-100 my-bg-user-chat p-3 overflow-scroll ">
+                        <div class="my-user-chat my-high-vh w-100 my-bg-user-chat p-3 overflow-scroll " ref="showLastMessage">
 
 
                             <div class="   d-flex  container-message"
